scrollbar needs fixing

--- a/frontend/src/components/cta/Cta.module.css
+++ b/frontend/src/components/cta/Cta.module.css
@@ -12,9 +12,10 @@
   width: 100%;
   align-items: center;
   justify-content: space-evenly;
-  background-color: var(--white);
+  /* background-color: var(--white); */
   height: 40vh;
   font-family: var(--principal);
+  border-bottom: 1px solid var(--blue);
 }
 
 .title {
@@ -35,14 +36,29 @@
 
 
 .zoom {
-  /* padding: 50px;
-  background-color: green; */
-  transition: transform .5s; /* Animation */
-  /* width: 200px;
-  height: 200px;
-  margin: 0 auto; */
+  transition: transform .5s;
 }
 
 .zoom:hover {
-  transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  transform: scale(1.1);
+}
+
+@media (max-width: 660px) {
+  .title {
+    font-size: 1.5rem;
+  }
+}
+
+@media (max-width: 400px) {
+  .cta {
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
+  .title {
+    display: flex;
+    align-items: inherit;
+    font-size: 1.1rem;
+    gap: 5px;
+  }
 }
