--- a/frontend/src/components/reviews/Reviews.module.css
+++ b/frontend/src/components/reviews/Reviews.module.css
@@ -71,3 +71,49 @@
 .reviewText {
   margin-top: 10px;
 }
+
+.reviewContainer {
+  width: 100%;
+  height: auto;
+  overflow-y: scroll; /* Always show the scrollbar */
+  scrollbar-width: thin; /* Firefox: Thin scrollbar */
+  scrollbar-color: var(--bg) var(--blue); /* Firefox: Thumb and track colors */
+  scrollbar-gutter: stable; /* Firefox: Reserve space for scrollbar */
+  position: relative;
+}
+
+/* WebKit Browsers (Chrome, Safari, Edge) */
+.reviewContainer::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+.reviewContainer::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: #F5F5F5;
+}
+
+.reviewContainer::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #555;
+}
+
+
+@media (max-width: 700px) {
+
+  .reviewContainer {
+    flex-direction: row;
+    overflow: scroll;
+    flex-wrap: nowrap;
+  }
+
+  .reviewSection {
+    height: auto;
+  }
+
+}
