--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,6 +12,7 @@ body {
   background-color: var(--bg);
   padding: 0px;
   margin: 0px;
+  overflow: scroll;
 }
 
 .container {
